@@ -8196,14 +8196,14 @@ namespace libtorrent
 		if (a < b) return 0;
 		return std::uint16_t(a - b);
 	}
-
+#ifndef TORRENT_NO_DEPRECATE
 	std::int16_t clamped_subtract_s16(int a, int b)
 	{
 		if (a + (std::numeric_limits<std::int16_t>::min)() < b)
 			return (std::numeric_limits<std::int16_t>::min)();
 		return std::int16_t(a - b);
 	}
-
+#endif
 	} // anonymous namespace
 
 	// this is called every time the session timer takes a step back. Since the
@@ -8255,8 +8255,9 @@ namespace libtorrent
 		}
 		m_became_finished = clamped_subtract_u16(m_became_finished, seconds);
 
-		m_last_upload = clamped_subtract_u16(m_last_upload, seconds);
-		m_last_download = clamped_subtract_u16(m_last_download, seconds);
+		// don't care about overflow because it would take 68 years
+		m_last_upload = m_last_upload - seconds;
+		m_last_download = m_last_download - seconds;
 #ifndef TORRENT_NO_DEPRECATE
 		m_last_scrape = clamped_subtract_s16(m_last_scrape, seconds);
 #endif
@@ -10558,9 +10559,9 @@ namespace libtorrent
 		st->active_time = active_time();
 		st->seeding_time = seeding_time();
 
-		st->time_since_upload = m_last_upload == (std::numeric_limits<std::uint16_t>::min)() ? -1
+		st->time_since_upload = m_last_upload == 0 ? -1
 			: clamped_subtract_u16(m_ses.session_time(), m_last_upload);
-		st->time_since_download = m_last_download == (std::numeric_limits<std::uint16_t>::min)() ? -1
+		st->time_since_download = m_last_download == 0 ? -1
 			: clamped_subtract_u16(m_ses.session_time(), m_last_download);
 #endif
 
