@@ -1,3 +1,4 @@
+	* fix last_upload and last_download overflow after 9 hours in past
 	* removed mmap_cache feature
 	* strengthened type safety in handling of piece and file indices
 	* deprecate identify_client() and fingerprint type
